--- a/deployment/failover.yaml
+++ b/deployment/failover.yaml
@@ -161,21 +161,18 @@ Resources:
           ARC_ROUTING_CONTROL_STANDBY_ARN: !Sub '{{resolve:secretsmanager:ArcRoutingControlStandbySecret${Env}}}'
           ARC_CLUSTER_ENDPOINTS: !Sub '{{resolve:secretsmanager:ArcClusterEndpoints${Env}}}'
 
-  AutomationDisablePrimaryRunbook:
+  DisablePrimaryApplicationRunbook:
     Type: AWS::SSM::Document
     Properties:
-      Name: !Sub 'AutomationDisablePrimaryRunbook${Env}'
+      Name: !Sub 'DisableApplication_PrimaryRegion${Env}'
       DocumentType: Automation
       DocumentFormat: YAML
       Content:
         description: |-
           *Runbook for Application Failover*
-
           ---
           # Runbook for Application Failover
-
-          1. Get Current Routing Control State
-          2. Rotate Arc Control
+          1. Rotate Arc Control
         schemaVersion: '0.3'
         assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
         mainSteps:
@@ -194,21 +191,18 @@ Resources:
                 Selector: $.Payload.routing_control_state
                 Type: String
 
-  AutomationDisableStandbyRunbook:
+  DisableStandbyApplicationRunbook:
     Type: AWS::SSM::Document
     Properties:
-      Name: !Sub 'AutomationDisableStandbyRunbook${Env}'
+      Name: !Sub 'DisableApplication_StandbyRegion${Env}'
       DocumentType: Automation
       DocumentFormat: YAML
       Content:
         description: |-
           *Runbook for Application Failover*
-
           ---
           # Runbook for Application Failover
-
-          1. Get Current Routing Control State
-          2. Rotate Arc Control
+          1. Rotate Arc Control
         schemaVersion: '0.3'
         assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
         mainSteps:
@@ -227,21 +221,18 @@ Resources:
                 Selector: $.Payload.routing_control_state
                 Type: String
 
-  AutomationEnablePrimaryRunbook:
+  EnablePrimaryApplicationRunbook:
     Type: AWS::SSM::Document
     Properties:
-      Name: !Sub 'AutomationEnablePrimaryRunbook${Env}'
+      Name: !Sub 'EnableApplication_PrimaryRegion${Env}'
       DocumentType: Automation
       DocumentFormat: YAML
       Content:
         description: |-
           *Runbook for Application Failover*
-
           ---
           # Runbook for Application Failover
-
-          1. Get Current Routing Control State
-          2. Rotate Arc Control
+          1. Rotate Arc Control
         schemaVersion: '0.3'
         assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
         mainSteps:
@@ -260,21 +251,18 @@ Resources:
                 Selector: $.Payload.routing_control_state
                 Type: String
 
-  AutomationEnableStandbyRunbook:
+  EnableStandbyApplicationRunbook:
     Type: AWS::SSM::Document
     Properties:
-      Name: !Sub 'AutomationEnableStandbyRunbook${Env}'
+      Name: !Sub 'EnableApplication_StandbyRegion${Env}'
       DocumentType: Automation
       DocumentFormat: YAML
       Content:
         description: |-
           *Runbook for Application Failover*
-
           ---
           # Runbook for Application Failover
-
-          1. Get Current Routing Control State
-          2. Rotate Arc Control
+          1. Rotate Arc Control
         schemaVersion: '0.3'
         assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
         mainSteps:
@@ -292,3 +280,125 @@ Resources:
               - Name: UPDATED_ROUTING_CONTROL_STATE
                 Selector: $.Payload.routing_control_state
                 Type: String
+
+  FailoverOrdersDbPrimary:
+    Type: AWS::SSM::Document
+    Properties:
+      Name: !Sub 'FailoverOrders_PrimaryRegion${Env}'
+      DocumentType: Automation
+      DocumentFormat: YAML
+      Content:
+        description: |-
+          *Fail Application & Orders DB out of Primary Region*
+          ---
+          # Runbook for Application Failover
+          1. Rotate Arc Control
+          2. Failover Orders Global DB
+        schemaVersion: '0.3'
+        assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
+        mainSteps:
+          - name: failOutApplication
+            action: 'aws:executeAutomation'
+            inputs:
+              DocumentName: !Ref DisablePrimaryApplicationRunbook
+              DocumentVersion: '1'
+          - name: failoverAuroraGlobalDB
+            action: 'aws:executeAwsApi'
+            inputs:
+              Service: rds
+              Api: FailoverGlobalCluster
+              AllowDataLoss: true
+              GlobalClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/orders-global-db-cluster${Env}}}'
+              TargetDbClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/orders-${StandbyRegion}-global-db-cluster${Env}}}'
+            isEnd: true
+
+  FailoverOrdersDbStandby:
+    Type: AWS::SSM::Document
+    Properties:
+      Name: !Sub 'FailoverOrders_StandbyRegion${Env}'
+      DocumentType: Automation
+      DocumentFormat: YAML
+      Content:
+        description: |-
+          *Fail Application & Orders DB out of Standby Region*
+          ---
+          # Runbook for Application Failover
+          1. Rotate Arc Control
+          2. Failover Orders Global DB
+        schemaVersion: '0.3'
+        assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
+        mainSteps:
+          - name: failOutApplication
+            action: 'aws:executeAutomation'
+            inputs:
+              DocumentName: !Ref DisableStandbyApplicationRunbook
+              DocumentVersion: '1'
+          - name: failoverAuroraGlobalDB
+            action: 'aws:executeAwsApi'
+            inputs:
+              Service: rds
+              Api: FailoverGlobalCluster
+              AllowDataLoss: true
+              GlobalClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/orders-global-db-cluster${Env}}}'
+              TargetDbClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/orders-${PrimaryRegion}-global-db-cluster${Env}}}'
+            isEnd: true
+  FailoverCatalogDbPrimary:
+    Type: AWS::SSM::Document
+    Properties:
+      Name: !Sub 'FailoverCatalog_PrimaryRegion${Env}'
+      DocumentType: Automation
+      DocumentFormat: YAML
+      Content:
+        description: |-
+          *Fail Application & Catalog DB out of Primary Region*
+          ---
+          # Runbook for Application Failover
+          1. Rotate Arc Control
+          2. Failover Catalog Global DB
+        schemaVersion: '0.3'
+        assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
+        mainSteps:
+          - name: failOutApplication
+            action: 'aws:executeAutomation'
+            inputs:
+              DocumentName: !Ref DisablePrimaryApplicationRunbook
+              DocumentVersion: '1'
+          - name: failoverAuroraGlobalDB
+            action: 'aws:executeAwsApi'
+            inputs:
+              Service: rds
+              Api: FailoverGlobalCluster
+              AllowDataLoss: true
+              GlobalClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/catalog-global-db-cluster${Env}}}'
+              TargetDbClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/catalog-${StandbyRegion}-global-db-cluster${Env}}}'
+            isEnd: true
+  FailoverCatalogDbStandby:
+    Type: AWS::SSM::Document
+    Properties:
+      Name: !Sub 'FailoverCatalog_StandbyRegion${Env}'
+      DocumentType: Automation
+      DocumentFormat: YAML
+      Content:
+        description: |-
+          *Fail Application & Catalog DB out of Standby Region*
+          ---
+          # Runbook for Application Failover
+          1. Rotate Arc Control
+          2. Failover Catalog Global DB
+        schemaVersion: '0.3'
+        assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AutomationServiceRole${Env}'
+        mainSteps:
+          - name: failOutApplication
+            action: 'aws:executeAutomation'
+            inputs:
+              DocumentName: !Ref DisableStandbyApplicationRunbook
+              DocumentVersion: '1'
+          - name: failoverAuroraGlobalDB
+            action: 'aws:executeAwsApi'
+            inputs:
+              Service: rds
+              Api: FailoverGlobalCluster
+              AllowDataLoss: true
+              GlobalClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/catalog-global-db-cluster${Env}}}'
+              TargetDbClusterIdentifier: !Sub '{{resolve:secretsmanager:mr-app/catalog-${PrimaryRegion}-global-db-cluster${Env}}}'
+            isEnd: true
