--- a/deployment/database/aurora/aurora-global-primary-cluster.yml
+++ b/deployment/database/aurora/aurora-global-primary-cluster.yml
@@ -56,6 +56,7 @@ Conditions:
   isOrders: !Equals
     - !Ref NamingPrefix
     - orders
+
 Resources:
   AuroraMySqlComputeSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -237,7 +238,26 @@ Resources:
       KmsKeyId: "alias/aws/secretsmanager"
       SecretString: !GetAtt DBIamRoleForMonitoring.Arn
       ReplicaRegions:
-        - Region: !If [ isPrimary, us-west-2, us-east-1 ]
+        - Region: us-west-2
+  GlobalDBName:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: !Sub 'mr-app/${NamingPrefix}-${GlobalClusterIdentifier}${Env}'
+      Description: !Sub 'GlobalClusterIdentifier for ${NamingPrefix}'
+      KmsKeyId: "alias/aws/secretsmanager"
+      SecretString: !Sub '${NamingPrefix}-${GlobalClusterIdentifier}${Env}'
+      ReplicaRegions:
+        - Region: us-west-2
+  DBClusterArn:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: !Sub 'mr-app/${NamingPrefix}-${AWS::Region}-${GlobalClusterIdentifier}${Env}'
+      Description: !Sub 'DBCluster Arn for ${NamingPrefix}'
+      KmsKeyId: "alias/aws/secretsmanager"
+      SecretString: !GetAtt DBCluster.DBClusterArn
+      ReplicaRegions:
+        - Region: us-west-2
+
 Outputs:
   GlobalDBCluster:
     Value: !Ref GlobalDBCluster
