--- a/source/ui/src/main/resources/application.yml
+++ b/source/ui/src/main/resources/application.yml
@@ -8,7 +8,7 @@ endpoints:
   carts: false #http://localhost:8082
   orders: false #http://localhost:8083
   assets: false #http://localhost:8084
-  checkout:  false #http://localhost:8085
+  checkout: false #http://localhost:8085
   logging: false
   http:
     keep-alive: true
@@ -24,3 +24,7 @@ management:
     web:
       exposure:
         include: '*'
+
+logging:
+  level:
+    root: debug
