Fixing ECS Service deployment order for UI, canaries for orders endpoint

--- a/deployment/ecs.yaml
+++ b/deployment/ecs.yaml
@@ -907,6 +907,12 @@ Resources:
               awslogs-stream-prefix: ecs  
   UiService:
     Type: AWS::ECS::Service
+    DependsOn:
+      - CartsService
+      - OrdersService
+      - AssetsService
+      - CatalogService
+      - CheckoutService
     Properties:
       ServiceName: !Sub ui${Env}
       LoadBalancers:
