--- a/deployment/regionalBaseInfra.yaml
+++ b/deployment/regionalBaseInfra.yaml
@@ -97,6 +97,8 @@ Resources:
           Value: "Public Route Table"
   pubRoute:
     Type: AWS::EC2::Route
+    DependsOn:
+      - IgwAttach
     Properties:
       RouteTableId: !Ref pubRouteTable
       DestinationCidrBlock: 0.0.0.0/0
